--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
           <h2>UI/UX Graphic Designer</h2>
           <p>Creative and detail-oriented with a wide range of experience in brand
             identity, digital design and layout. Enthusiastic about problem solving, interactive applications
-            and using technology to enrich the user experience.</p>
-          <button>Download Resume</button>
+            and enriching the user experience.</p>
+          <br>
+          <button class="dwnld">Download Resume</button>
         </div>
         <div class="photo">
-            <img src="images/nickphoto.JPG" width="250">
+            <img src="images/nickphoto.JPG" width="301">
         </div>
     </section>
     <!--  My UX Skills section coded using CSS flex -->
@@ -59,7 +60,7 @@
                 <div class="workTitle">
                     <h4>U.S. Dept. of Energy</h4>
                     <p>Redesign of the goveernment website Energy.gov.</p>
-                    <button>View Case Study</button>
+                    <button class="buttons">View Case Study</button>
                 </div>
             </div>
 
@@ -69,7 +70,7 @@
                 <div class="workTitle">
                     <h4>Horse Hugs</h4>
                     <p>A complete overhaul of this nonprofit organization's website.</p>
-                    <button>View Case Study</button>
+                    <button class="buttons">View Case Study</button>
                 </div>
             </div>
 
@@ -79,7 +80,7 @@
                 <div class="workTitle">
                     <h4>Graphic Design Work</h4>
                     <p>Examples of traditional design.</p>
-                    <button>View Portfolio</button>
+                    <button class="buttons">View Portfolio</button>
                 </div>
             </div>
         </div>
