--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <img src="images/nickphoto.JPG" width="301">
         </div>
     </section>
+    <div id="welcome"></div>
     <!--  My UX Skills section coded using CSS flex -->
     <section class="mySkills">
         <h5>My Skills</h5>
@@ -63,7 +64,6 @@
                     <button class="buttons">View Case Study</button>
                 </div>
             </div>
-
             <div class="workCard2">
                 <img src="images/Work_Horse.jpg">
             
@@ -94,4 +94,5 @@
       </ul>
     </footer>
   </body>
+  <script src="js/index.js"></script>
 </html>
