updated images and copy

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         <h5>My Skills</h5>
         <div class="flexContainer">
             <div class="flexBox">
-                <img src="images/NP_Logo_Lg.png" width="100">
+                <img src="images/ux_research.png">
                 <h3>UX Research</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>Creating User Personas, User Testing and Affinity Diagrams <br>to understand the end user and their needs.</p>
             </div>
             <div class="flexBox">
-                <img src="images/NP_Logo_Lg.png" width="100">
+                <img src="images/art_direction.png">
                 <h3>Art Direction</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>Leading a team of designers to reach an artistic goal <br>through critique and collaboration.</p>
             </div>
             <div class="flexBox">
-                <img src="images/NP_Logo_Lg.png" width="100">
+                <img src="images/prototype.png">
                 <h3>Prototyping</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>Creating multi-fidelity, functional prototypes to <br>further testing and refine UI design.</p>
             </div>
         </div>
     </section>
